[package]
name = "fitimer"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A timer to keep fit and healthy whilst having a sedentary work."
keywords = ["timer", "health"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
tui = "0.19"
crossterm = "0.25"
dotenv = "0.15.0"
colors-transform = "0.2.11"
chrono = "0.4.24"
